# namada-indexer

./: .dockerignore  .env.sample  .env_sample  .gitignore  .taplo.toml  Cargo.toml  Dockerfile  README.md  algorithm  checksums.json  diesel.toml  docker-compose-db.yml  docker-compose-dev.yml  docker-compose.yml  indexer.Dockerfile  justfile  openapi.json  pgcat.Dockerfile  pgcat.toml  release-please-config.json  rust-nightly-version  rust-toolchain.toml  rustfmt.toml  signature  swagger-codegen.config  swagger-codegen.json  swagger-config.json  swagger.yml
chain/: Cargo.toml  Dockerfile  run-test.sh  run.sh
chain/src/: app_state.rs  config.rs  crawler.rs  db_service.rs  error.rs  lib.rs  main.rs  namada_service.rs  tendermint_service.rs  test_db.rs
chain/src/repository/: balance.rs  block.rs  crawler.rs  crawler_state.rs  crawler_status.rs  gov.rs  mod.rs  pgf.rs  pos.rs  revealed_pk.rs
chain/src/services/: db.rs  mod.rs  namada.rs  tendermint.rs  utils.rs
governance/: Cargo.toml  Dockerfile  run.sh
governance/src/: config.rs  lib.rs  main.rs  state.rs
governance/src/repository/: crawler_state.rs  governance.rs  mod.rs  pgf.rs
governance/src/services/: db.rs  mod.rs  namada.rs  tendermint.rs
orm/: Cargo.toml  Makefile  diesel.toml
orm/migrations/2024-04-16-112017_create_tx_crawler_state/: down.sql  up.sql
orm/migrations/2024-04-16-112017_init_block_crawler_state/: down.sql  up.sql
orm/migrations/2024-04-17-090406_tokens/: down.sql  up.sql
orm/migrations/2024-04-18-102935_init_balances/: down.sql  up.sql
orm/migrations/2024-04-18-102935_init_nam_balances/: up.sql
orm/migrations/2024-04-30-070745_init_epoch_crawler_state/: down.sql  up.sql
orm/migrations/2024-04-30-081808_init_validators/: down.sql  up.sql
orm/migrations/2024-05-08-110347_init_bonds/: down.sql  up.sql
orm/migrations/2024-05-08-130928_governance_proposals/: down.sql  up.sql
orm/migrations/2024-05-08-130935_governance_votes/: down.sql  up.sql
orm/migrations/2024-05-09-042930_init_unbonds/: down.sql  up.sql
orm/migrations/2024-05-09-131859_pos_rewards/: down.sql  up.sql
orm/migrations/2024-05-31-125032_chain_parameters/: down.sql  up.sql
orm/migrations/2024-06-03-084149_init_revealed_pk/: down.sql  up.sql
orm/migrations/2024-06-09-101316_blocks/: down.sql  up.sql
orm/migrations/2024-06-09-102302_transactions/: down.sql  up.sql
orm/migrations/2024-06-09-102731_consensus_keys/: down.sql  up.sql
orm/migrations/2024-06-12-140948_gas/: down.sql  up.sql
orm/migrations/2024-06-14-110621_gas_price/: down.sql  up.sql
orm/migrations/2024-07-04-103941_crawler_state/: down.sql  up.sql
orm/migrations/2024-07-04-103941_crawler_status/: down.sql  up.sql
orm/migrations/2024-07-19-193443_transparent_transfer_to_transfer/: down.sql  up.sql
orm/migrations/2024-07-19-203433_add_height_to_balances/: down.sql  up.sql
orm/migrations/2024-08-02-122312_redelegation/: down.sql
orm/migrations/2024-10-14-073203_add_cubic_slashing_window_length/: down.sql  up.sql
orm/migrations/2024-11-29-091248_public_good_funding/: down.sql  up.sql
orm/migrations/2024-12-01-170248_ibc_ack/: down.sql  up.sql
orm/migrations/2024-12-06-091347_block/: down.sql  up.sql
orm/migrations/2024-12-09-225148_init_blocks/: down.sql  up.sql
orm/migrations/2024-12-10-104502_transaction_types/: down.sql  up.sql
orm/migrations/2024-12-10-110059_validator_states/: down.sql  up.sql
orm/migrations/2024-12-16-231256_add_epoch_pos_rewards_table/: down.sql  up.sql
orm/migrations/2024-12-16-231256_create_pos_rewards_table/: down.sql  up.sql
orm/migrations/2024-12-17-095036_transaction_gas_used/: down.sql  up.sql
orm/migrations/2024-12-17-103655_transaction_history/: down.sql  up.sql
orm/migrations/2024-12-20-092544_gas_eastimation/: down.sql  up.sql
orm/migrations/2025-01-09-135629_update_masp_txs_gas_limits/: down.sql  up.sql
orm/migrations/2025-01-13-115313_vote_unknown/: up.sql
orm/migrations/2025-01-15-130138_transaction_kind_mixed_transfer/: up.sql
orm/migrations/2025-01-15-135342_masp/: down.sql  up.sql
orm/migrations/2025-01-16-100856_transaction_amount_per_gas_unit/: down.sql  up.sql
orm/migrations/2025-01-16-131336_transaction_ibc_types/: up.sql
orm/migrations/2025-01-27-130323_gas_estimation_ibc/: down.sql  up.sql
orm/migrations/2025-02-06-093718_token_supplies/: down.sql  up.sql
orm/migrations/2025-02-12-144212_ibc_token_flows/: down.sql  up.sql
orm/src/: balances.rs  block.rs  block_crawler_state.rs  blocks.rs  bond.rs  cometbft.rs  crawler_state.rs  crawler_status.rs  epoch_crawler_state.rs  gas.rs  governance_proposal.rs  governance_votes.rs  group_by_macros.rs  helpers.rs  ibc.rs  lib.rs  masp.rs  migrations.rs  nam_balances.rs  parameters.rs  pgf.rs  pos_rewards.rs  redelegation.rs  revealed_pk.rs  schema.rs  token.rs  token_supplies_per_epoch.rs  transactions.rs  unbond.rs  utils.rs  validators.rs  views.rs
parameters/: Cargo.toml  Dockerfile  run.sh
parameters/src/: config.rs  main.rs
pos/: Cargo.toml  Dockerfile  run.sh
pos/src/: config.rs  lib.rs  main.rs  redis_subscriber.rs
rewards/: Cargo.toml  Dockerfile  run.sh
rewards/src/: config.rs  lib.rs  main.rs  schema.rs
seeder/: Cargo.toml  Dockerfile  run.sh
seeder/src/: config.rs  main.rs
shared/: Cargo.toml
shared/src/: balance.rs  block.rs  block_result.rs  bond.rs  checksums.rs  client.rs  cometbft.rs  crawler.rs  crawler_state.rs  crawler_status.rs  error.rs  event_store.rs  events.rs  futures.rs  gas.rs  genesis.rs  header.rs  id.rs  lib.rs  log_config.rs  masp.rs  parameters.rs  pgf.rs  pos.rs  proposal.rs  public_key.rs  rewards.rs  ser.rs  token.rs  transaction.rs  tuple_len.rs  unbond.rs  utils.rs  validator.rs  vote.rs
test_helpers/: Cargo.toml
test_helpers/src/: config.rs  db.rs
transactions/: Cargo.toml  Dockerfile  run.sh
transactions/src/: config.rs  main.rs
utilities/: Cargo.toml
utilities/src/: config.rs  main.rs  namada.rs  utils.rs
webserver/: Cargo.toml  Dockerfile  README.md  run.sh
webserver/src/: app.rs  appstate.rs  config.rs  constant.rs  lib.rs  main.rs
(+189 files in other folders)
