[workspace]
resolver = "2"

members = ["chain", "shared", "rewards", "orm", "pos", "governance", "webserver", "seeder", "parameters", "transactions", "test_helpers"]

[workspace.package]
authors = ["Heliax <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
version = "1.1.4"

[workspace.dependencies]
clokwerk = "0.4.0"
axum = { version = "0.7.2", features = ["tower-log", "http2"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
    "buffer",
] }
tower-http = { version = "0.5.0", features = [
    "compression-full",
    "limit",
    "trace",
    "cors",
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.2", features = ["derive", "env"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
reqwest = { version = "0.12.0", features = ["json", "cookies"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["query"] }
chrono = { version = "0.4.30", features = ["serde"] }
async-trait = "0.1.73"
anyhow = "1.0.75"
namada_core = { git = "https://github.com/anoma/namada", branch = "fraccaman/rpc-pgf-payments" }
namada_sdk = { git = "https://github.com/anoma/namada", branch = "fraccaman/rpc-pgf-payments", default-features = false, features = ["std", "async-send", "download-params"] }
namada_tx = { git = "https://github.com/anoma/namada", branch = "fraccaman/rpc-pgf-payments" }
namada_governance = { git = "https://github.com/anoma/namada", branch = "fraccaman/rpc-pgf-payments" }
namada_ibc = { git = "https://github.com/anoma/namada", branch = "fraccaman/rpc-pgf-payments" }
namada_token = { git = "https://github.com/anoma/namada", branch = "fraccaman/rpc-pgf-payments" }
namada_parameters = { git = "https://github.com/anoma/namada", branch = "fraccaman/rpc-pgf-payments" }
namada_proof_of_stake = { git = "https://github.com/anoma/namada", branch = "fraccaman/rpc-pgf-payments" }
tendermint = "0.38.0"
tendermint-config = "0.38.0"
tendermint-rpc = { version = "0.38.0", features = ["http-client"] }
tendermint-proto = "0.38.0"
subtle-encoding = "0.5.1"
bimap = { version = "0.6.3", features = ["serde"] }
async-stream = "0.3.5"
futures-core = "0.3.30"
futures-util = "0.3.30"
futures = "0.3.30"
smooth-operator = {git = "https://github.com/heliaxdev/smooth-operator", tag = "v0.7.0"}
tokio-stream = "0.1.15"
tokio-retry = "0.3"
thiserror = "1.0.56"
diesel_migrations = { version = "2.2.0", default-features = false, features = [
    "postgres",
] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2.2.0", features = [
    "postgres",
    "serde_json",
    "numeric",
    "chrono",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
orm = { path = "orm" }
test_helpers = { path = "test_helpers" }
shared = { path = "shared" }
lazy_static = "1.4.0"
validator = { version = "0.16.0", features = ["derive"] }
derive_builder = "0.12.0"
clap-verbosity-flag = "2.1.1"
duration-str = "0.7.1"
fake = { version = "2.10.0", features = ["derive"] }
rand = "0.8.5"
bigdecimal = "0.4.5"
strum = "0.26.3"
strum_macros = "0.26.3"
sha256 = "1.5.0"
rlimit = "0.10.2"