[package]
name = "chain"
description = "Namada chain crawler."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "chain"
path = "src/main.rs"

[dependencies]
test_helpers.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap.workspace = true
anyhow.workspace = true
namada_sdk.workspace = true
namada_core.workspace = true
namada_governance.workspace = true
namada_token.workspace = true
tendermint-rpc.workspace = true
subtle-encoding.workspace = true
shared.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
orm.workspace = true
futures.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
