[package]
name = "chain"
description = "Namada chain crawler."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "chain"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
futures.workspace = true
namada_core.workspace = true
namada_governance.workspace = true
namada_sdk.workspace = true
namada_token.workspace = true
orm.workspace = true
rlimit.workspace = true
serde_json.workspace = true
shared.workspace = true
subtle-encoding.workspace = true
tendermint-rpc.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
tracing.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }

[dev-dependencies]
test_helpers.workspace = true
