[package]
name = "governance"
description = "Namada governance crawler."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "governance"
path = "src/main.rs"

[dependencies]
tokio.workspace = true 
tracing.workspace = true
chrono.workspace = true 
clap.workspace = true 
anyhow.workspace = true
namada_sdk.workspace = true
namada_governance.workspace = true
tendermint-rpc.workspace = true
shared.workspace = true
futures.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
orm.workspace = true
tokio-retry.workspace = true
serde_json.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
