[package]
name = "governance"
description = "Namada governance crawler."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "governance"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
futures.workspace = true
namada_governance.workspace = true
namada_sdk.workspace = true
orm.workspace = true
serde_json.workspace = true
shared.workspace = true
tendermint-rpc.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
