[package]
name = "orm"
description = "Namada indexer orm."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[lib]
name = "orm"
path = "src/lib.rs"

[dependencies]
deadpool-diesel.workspace = true
diesel-derive-enum.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
serde.workspace = true
shared.workspace = true
