[package]
name = "orm"
description = "Namada indexer orm."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[lib]
name = "orm"
path = "src/lib.rs"

[dependencies]
bigdecimal.workspace = true
chrono.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
diesel-derive-enum.workspace = true
diesel_migrations.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
tendermint-rpc.workspace = true
