[package]
name = "parameters"
description = "Namada chain parameters crawling."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "parameters"
path = "src/main.rs"

[dependencies]
tokio.workspace = true 
tracing.workspace = true
chrono.workspace = true 
clap.workspace = true 
anyhow.workspace = true
namada_sdk.workspace = true
namada_core.workspace = true
namada_parameters.workspace = true
tendermint-rpc.workspace = true
shared.workspace = true
serde_json.workspace = true
futures.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
orm.workspace = true
tokio-retry.workspace = true
smooth-operator.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
