[package]
name = "parameters"
description = "Namada chain parameters crawling."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version = "2.4.4"

[[bin]]
name = "parameters"
path = "src/main.rs"

[dependencies]
tokio.workspace = true 
tracing.workspace = true
chrono.workspace = true 
clap.workspace = true 
anyhow.workspace = true
namada_sdk.workspace = true
namada_core.workspace = true
namada_parameters.workspace = true
tendermint-rpc.workspace = true
shared.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
orm.workspace = true
smooth-operator.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
