[package]
name = "pos"
version = "2.4.4"
description = "Namada proof of stake crawler."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "pos"
path = "src/main.rs"

[dependencies]
tokio.workspace = true 
tracing.workspace = true
chrono.workspace = true 
clap.workspace = true 
anyhow.workspace = true
namada_sdk.workspace = true
namada_core.workspace = true
tendermint-rpc.workspace = true
shared.workspace = true
futures.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
orm.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
