[package]
name = "rewards"
description = "Namada proof of stake rewards crawler."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "rewards"
path = "src/main.rs"

[dependencies]
tokio.workspace = true 
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true 
anyhow.workspace = true
namada_sdk.workspace = true
shared.workspace = true
futures.workspace = true
tokio-retry.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
orm.workspace = true
clap-verbosity-flag.workspace = true
tendermint-rpc.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }