[package]
name = "seeder"
version = "2.4.4"
description = "Database seeder."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "seeder"
path = "src/main.rs"

[dependencies]
tokio.workspace = true 
tracing.workspace = true
clap.workspace = true 
anyhow.workspace = true
shared.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
orm.workspace = true
rand.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
