[package]
name = "seeder"
description = "Database seeder."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "seeder"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
orm.workspace = true
rand.workspace = true
shared.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
