[package]
name = "shared"
description = "Namada IT shared data."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
bimap.workspace = true
bigdecimal.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
namada_core.workspace = true
namada_governance.workspace = true
namada_proof_of_stake.workspace = true
namada_ibc.workspace = true
namada_sdk.workspace = true
namada_tx.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle-encoding.workspace = true
tendermint-rpc.workspace = true
tendermint.workspace = true
thiserror.workspace = true
tokio-retry.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fake.workspace = true
rand.workspace = true