[package]
name = "test_helpers"
description = "Namada indexer test_helpers."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version = "2.4.4"

[lib]
name = "test_helpers"
path = "src/lib.rs"

[dependencies]
orm.workspace = true
anyhow.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
shared.workspace = true
