[package]
name = "transactions"
version = "2.4.4"
description = "Namada transactions indexer."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "transactions"
path = "src/main.rs"

[dependencies]
bigdecimal.workspace = true
tokio.workspace = true 
tracing.workspace = true
chrono.workspace = true
clap.workspace = true 
anyhow.workspace = true
namada_sdk.workspace = true
tendermint-rpc.workspace = true
shared.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
orm.workspace = true
serde_json.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
