[package]
name = "transactions"
description = "Namada transactions indexer."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "transactions"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bigdecimal.workspace = true
chrono.workspace = true
clap.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
namada_sdk.workspace = true
orm.workspace = true
serde_json.workspace = true
shared.workspace = true
tendermint-rpc.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
