[package]
name = "utility"
description = "Namada utility functions."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "fix"
path = "src/main.rs"

[features]
production = []

[dependencies]
csv = "1.1"
axum.workspace = true 
chrono.workspace = true
tokio.workspace = true 
tower.workspace = true 
tower-http.workspace = true 
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true 
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
deadpool-diesel.workspace = true
validator.workspace = true
axum-macros.workspace = true
axum-extra.workspace = true
orm.workspace = true
diesel.workspace = true
futures.workspace = true
tokio-stream.workspace = true
namada_core.workspace = true
namada_sdk.workspace = true
deadpool-redis = { workspace = true }
bigdecimal.workspace = true
shared.workspace = true
strum.workspace = true
axum-prometheus = { workspace = true }
sha256.workspace = true
subtle-encoding.workspace = true
