[package]
name = "webserver"
description = "Namada it API."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
build = "build.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

[lib]
name = "webserver"
path = "src/lib.rs"

[features]
production = []

[dependencies]
axum.workspace = true 
chrono.workspace = true
tokio.workspace = true 
tower.workspace = true 
tower-http.workspace = true 
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true 
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
deadpool-diesel.workspace = true
validator.workspace = true
axum-macros.workspace = true
axum-extra.workspace = true
orm.workspace = true
diesel.workspace = true
futures.workspace = true
tokio-stream.workspace = true
namada_core.workspace = true
namada_sdk.workspace = true
namada_parameters.workspace = true
deadpool-redis = "0.13.0"
bigdecimal.workspace = true
shared.workspace = true
strum.workspace = true
strum_macros.workspace = true
axum-prometheus = "0.7.0"
sha256.workspace = true
subtle-encoding.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
