[package]
name = "webserver"
description = "Namada it API."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
build = "build.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

[lib]
name = "webserver"
path = "src/lib.rs"

[features]
production = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-macros.workspace = true
axum-prometheus = { workspace = true }
bigdecimal.workspace = true
chrono.workspace = true
clap.workspace = true
deadpool-diesel.workspace = true
deadpool-redis = { workspace = true }
diesel.workspace = true
futures.workspace = true
lazy_static.workspace = true
namada_core.workspace = true
namada_sdk.workspace = true
orm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha256.workspace = true
shared.workspace = true
strum.workspace = true
subtle-encoding.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
validator.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
